# spires-batch

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
doc/: requirements.txt
doc/source/: conf.py  index.md
src/spires_batch/: __init__.py
