[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spires-batch"
dynamic = ["version"]  # version derived from git tags via setuptools_scm
description = "SPIReS batch processing: run the retrieval at scale over stacks of granules and spacetime cubes"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Niklas Griessbaum" }]
keywords = ["snow", "remote sensing", "dask", "slurm", "batch", "SPIRES"]

# Batch builds on the metapackage's single-unit convenience kernel
# (`spires.invert`) and parallelizes it across many units of work. The
# scaling backends (dask, slurm) are heavy and opt-in.
dependencies = [
    "spires",
    "xarray",
]

[project.optional-dependencies]
dask = ["dask[distributed]"]
slurm = ["dask-jobqueue"]
all = ["dask[distributed]", "dask-jobqueue"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/SPIReS-Organization/spires-batch"
Repository = "https://github.com/SPIReS-Organization/spires-batch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
